Project

General

Profile

Actions

Bug #37292

closed

RDMAStack - poll failed error when using IB and RDMACM

Added by Stig Telfer over 5 years ago. Updated about 5 years ago.

Status:
Resolved
Priority:
Normal
Assignee:
Category:
-
Target version:
-
% Done:

0%

Source:
Community (dev)
Tags:
RDMA
Backport:
Regression:
No
Severity:
3 - minor
Reviewed:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

The error message "polling - poll failed" occurs because interrupted system calls are not handled in method RDMADispatcher::polling. This appears to happen regularly in a configuration using Infiniband and RDMACM.


Related issues 1 (0 open1 closed)

Has duplicate Messengers - Bug #38392: msg/async: the poll needs to retry when it is interrupted by signalDuplicate02/20/2019

Actions
Actions #1

Updated by Kefu Chai about 5 years ago

  • Has duplicate Bug #38392: msg/async: the poll needs to retry when it is interrupted by signal added
Actions #2

Updated by Kefu Chai about 5 years ago

  • Status changed from New to Fix Under Review
  • Assignee set to Stig Telfer
  • Target version deleted (v14.0.0)
  • Pull request ID set to 25138
Actions #3

Updated by Kefu Chai about 5 years ago

  • Status changed from Fix Under Review to Resolved
Actions #4

Updated by Greg Farnum about 5 years ago

  • Project changed from Ceph to Messengers
  • Category deleted (msgr)
Actions

Also available in: Atom PDF